# personalrestapi

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  GEMINI.md  README.md  docker-compose.test.yml
migrations/: 20250710013749_users.sql  20250710013809_sessions.sql
src/: config.rs  logger.rs  main.rs  mocks.rs
src/database/: connection.rs  mod.rs  redis_connection.rs
src/database/session/: model.rs  repository.rs
src/database/stream/: mod.rs  model.rs  repository.rs
src/database/user/: model.rs  repository.rs
src/server/: error.rs  mod.rs
src/server/api/: health_controller.rs  mod.rs  movie_controller.rs  proxy_controller.rs  stream_controller.rs  user_controller.rs
src/server/dtos/: health_dto.rs  mod.rs  movie_dto.rs  session_dto.rs  stream_dto.rs  user_dto.rs
src/server/extractors/: required_authentication_extractor.rs  session_extractor.rs  user_agent_extractor.rs  validation_extractor.rs
src/server/services/: mod.rs  movie_services.rs  ppvsu_services.rs  seed_services.rs  session_services.rs  stream_services.rs  user_services.rs
src/server/utils/: argon_utils.rs  jwt_utils.rs  mod.rs  signature_utils.rs
tests/: movie_decrypt_should.rs  ppvsu_api_fetch_should.rs  users_service_signin_user_should.rs  users_service_signup_user_should.rs
