[package]
name = "api"
version = "0.0.1"
edition = "2024"

authors = ["Yan Bogdanovskyy <main@yawnbo.com>"]
repository = "https://github.com/yawnbo/personal/back"
description = "Backend component of a personal website, providing authentication and more."

publish = false

readme = "README.md"

# docs need to be read on axum at the least
# these also need to be updated because they are pretty outdated i think,

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22"
crypto_secretbox = "0.1"
flate2 = "1.0"
# first breaking, target is 0.8.5, originally 0.6.10
axum = { version = "0.8.4", features = ["tower-log"] }
# originally 0.7.1
axum-extra = { version = "0.10.1", features = ["cookie"] }
backtrace = "0.3.75"
chrono = "0.4"
clap = { version = "4.5.41", features = ["derive","env"] }
dotenvy = "0.15.7"
futures = "0.3"
hex = "0.4"
http-body = "1.0.1"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
mockall = "0.13.1"
nanoid = "0.4.0"
rust-argon2 = "2.1.0"
rand = { version = "0.9.2", features = [ "os_rng" ] }
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "time"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout", "buffer", "limit"] }
tower-http = {version="0.6.6", features = ["trace", "cors"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
sentry = { version = "0.35", features = ["tracing", "backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.35"
url = "2.5"
urlencoding = "2.1"
validator = { version = "0.20.0", features = ["derive"] }
zstd = "0.13"
hmac = "0.12.1"
sha2 = "0.10.9"
